...
                            <constraint firstItem="HS0-3J-1r4" firstAttribute="trailing" secondItem="gdb-TX-ONS" secondAttribute="trailing" constant="8" id="t8l-vY-dns"/>
                            <constraint firstItem="gdb-TX-ONS" firstAttribute="top" secondItem="HS0-3J-1r4" secondAttribute="top" constant="8" id="tn9-G6-hQH"/>
                            <constraint firstItem="cjX-T4-gUG" firstAttribute="leading" secondItem="HS0-3J-1r4" secondAttribute="leading" constant="20" id="v2t-xV-cEn"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="HS0-3J-1r4"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Profile" image="baseline_person_black_18dp" id="pLd-N6-ity"/>
                    <navigationItem key="navigationItem" id="Li0-zO-8QW"/>
                    <connections>
                        <outlet property="aboutMeTextView" destination="oRr-aj-dZv" id="UTI-tP-cle"/>
                        <outlet property="imageView" destination="ueV-kT-hF5" id="Czf-ZW-1gD"/>
                        <outlet property="namelabel" destination="hRL-Mx-6YC" id="lAa-V6-U8E"/>
                        <outlet property="statusLabel" destination="4UW-0l-jCS" id="v2E-Pj-K2k"/>
...
                            <constraint firstItem="p06-TC-BEn" firstAttribute="trailing" secondItem="Fye-hO-jU1" secondAttribute="trailing" constant="20" id="3cL-2o-khI"/>
                            <constraint firstItem="Fye-hO-jU1" firstAttribute="leading" secondItem="p06-TC-BEn" secondAttribute="leading" constant="20" id="OdF-fK-ErK"/>
                            <constraint firstItem="Fye-hO-jU1" firstAttribute="top" secondItem="p06-TC-BEn" secondAttribute="top" constant="20" id="ZPf-E4-5tB"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="p06-TC-BEn"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="MySchedule" image="baseline_calendar_today_black_18dp" id="gx8-lw-gzG">
                        <color key="badgeColor" systemColor="linkColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    </tabBarItem>
                    <connections>
                        <outlet property="numberOfMettingsLabel" destination="Fye-hO-jU1" id="ixQ-3h-kGt"/>
                        <outlet property="tableView" destination="bo7-kE-JUX" id="CFK-5N-87D"/>
                    </connections>
...
                    <view key="view" contentMode="scaleToFill" id="dvh-d9-384">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <viewLayoutGuide key="safeArea" id="bdL-3g-t58"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Messages" image="baseline_message_black_18dp" id="sX2-el-f4u">
                        <color key="badgeColor" systemColor="linkColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    </tabBarItem>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="EEd-zz-lmn" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="2930" y="3978"/>
...
